# speak-home-project

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  new-feature.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/agent/: summary.py  tools.py  tutor.py  worker.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_session_duration.py
backend/api/: auth_utils.py  deps.py  main.py
backend/api/routes/: auth.py  sessions.py  summaries.py
backend/shared/: config.py  db.py  models.py  session_duration.py  session_state.py
backend/tests/: conftest.py
backend/tests/integration/: test_agent_context_loading.py  test_auth_api.py  test_db_layer.py  test_sessions_api.py  test_summaries_api.py
backend/tests/unit/: test_agent_tools.py  test_auth_utils.py  test_config.py  test_session_duration.py  test_session_state.py  test_summary.py
e2e/: package-lock.json  package.json  playwright.config.ts  run-one.mjs
e2e/helpers/: api.ts  auth.ts
e2e/scripts/: start-backend.sh
e2e/tests/: auth.spec.ts  reconnect.spec.ts  session.spec.ts  summary.spec.ts
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/session/[id]/: page.tsx  summary.tsx
frontend/lib/: api.ts  formatDuration.ts
